fix: #WB-2448, remove upload card overflow

--- a/packages/bootstrap/scss/components/_card.scss
+++ b/packages/bootstrap/scss/components/_card.scss
@@ -119,6 +119,7 @@
   }
 
   &.card-upload {
+    overflow: inherit;
     flex-direction: unset;
     border: hidden !important;
     box-shadow: unset !important;
